--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,27 @@
-buildscript {
-    ext {
-        springBootVersion = '2.1.3.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath('io.spring.gradle:dependency-management-plugin')
-    }
-}
+group 'com.kcb'
+version '0.0.1-SNAPSHOT'
 
 subprojects {
-    group = 'com.kcb'
-    version = '0.0.1-SNAPSHOT'
-
     apply plugin: 'java'
-    apply plugin: 'eclipse'
-    apply plugin: 'idea'
-    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
-
-    sourceCompatibility = 1.8
-    compileJava.options.encoding = 'UTF-8'
-    
     repositories {
-        mavenLocal()
         mavenCentral()
-    }
-    
-    task initSourceFolders {
-        sourceSets*.java.srcDirs*.each {
-            if( !it.exists() ) {
-                it.mkdirs()
-            }
-        }
-
-        sourceSets*.resources.srcDirs*.each {
-            if( !it.exists() ) {
-                it.mkdirs()
-            }
-        }
     }
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-aop'
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        implementation 'org.springframework.boot:spring-boot-starter-web'
-        compileOnly 'org.projectlombok:lombok'
-        annotationProcessor 'org.projectlombok:lombok'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        compile("com.google.guava:guava:23.0")
+        compile("org.springframework.boot:spring-boot-starter-security")
+        compile("net.logstash.logback:logstash-logback-encoder:5.2")
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.3.0')
+        testCompile('org.junit.jupiter:junit-jupiter-params:5.3.0')
+        testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.0')
+        testCompile "org.mockito:mockito-core:2.+"
+        testCompile('org.mockito:mockito-junit-jupiter:2.18.3')
+        testCompile('org.springframework.boot:spring-boot-starter-test') {
+            exclude group: 'junit', module: 'junit'
+        }
+        compile('org.apache.commons:commons-lang3:3.8.1')
+        compile 'com.jayway.jsonpath:json-path:2.3.0'
     }
+
 
 }
