--- a/krios-base-platform/build.gradle
+++ b/krios-base-platform/build.gradle
@@ -1,4 +1,45 @@
+buildscript {
+    ext {
+        springBootVersion = '2.1.0.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
+
+plugins {
+    id 'com.google.cloud.tools.jib' version '0.10.0'
+}
+
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+group = 'com.kcb'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.8
+
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
+
 
 dependencies {
-    
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-webflux')
+    compile('org.springframework.boot:spring-boot-starter-websocket')
+    compile('org.flywaydb:flyway-core')
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    runtime("io.micrometer:micrometer-registry-prometheus:1.1.0")
+    compileOnly('org.projectlombok:lombok:1.18.2')
+    testCompile('com.h2database:h2')
+    testCompile('io.projectreactor:reactor-test')
 }
