--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,20 @@ subprojects {
         mavenCentral()
     }
 
+    task initSourceFolders {
+        sourceSets*.java.srcDirs*.each {
+            if( !it.exists() ) {
+                it.mkdirs()
+            }
+        }
+
+        sourceSets*.resources.srcDirs*.each {
+            if( !it.exists() ) {
+                it.mkdirs()
+            }
+        }
+    }
+
     dependencies {
         compile("com.google.guava:guava:23.0")
         compile("org.springframework.boot:spring-boot-starter-security")
